# Projecs

./: README.md
django_react_auth/: pyproject.toml
django_react_auth/backend/backend/: settings.py  urls.py
django_react_auth/backend/users/: models.py  serializers.py  views.py
django_react_auth/backend/users/migrations/: 0001_initial.py
django_react_auth/frontend/: package-lock.json  package.json
django_react_auth/frontend/src/contexts/: AuthContext.jsx
django_react_auth/frontend/src/services/: auth.js
